feat: swagger @Router api/v1/categories
