# docs/swagger.yaml
@@ -1,4 +1,11 @@
 definitions:
+  controllers.allCategoryResponse:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+    type: object
   controllers.authForm:
     properties:
       email:
@@ -21,6 +28,13 @@ definitions:
         type: integer
       name:
         type: string
+    type: object
+  controllers.createCategoryForm:
+    properties:
+      name:
+        type: string
+    required:
+    - name
     type: object
   controllers.createUserForm:
     properties:
@@ -83,6 +97,11 @@ definitions:
         type: array
       paging:
         $ref: '#/definitions/controllers.pagingResult'
+    type: object
+  controllers.updateCategoryForm:
+    properties:
+      name:
+        type: string
     type: object
   controllers.updateUserForm:
     properties:
@@ -216,6 +235,124 @@ paths:
       summary: add an user
       tags:
       - auth
+  /api/v1/categories:
+    get:
+      consumes:
+      - application/json
+      description: get by form categories
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/controllers.allCategoryResponse'
+            type: array
+      summary: Show an categories
+      tags:
+      - categories
+    post:
+      consumes:
+      - application/json
+      description: add by form category
+      parameters:
+      - description: name
+        in: body
+        name: name
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.createCategoryForm'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/controllers.allCategoryResponse'
+      security:
+      - BearerAuth: []
+      summary: add an category
+      tags:
+      - categories
+  /api/v1/categories/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete by json category
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: ""
+        "404":
+          description: '{"error": "not found"}'
+          schema:
+            additionalProperties: true
+            type: object
+        "422":
+          description: Bad Request
+          schema:
+            type: string
+      security:
+      - BearerAuth: []
+      summary: delete an category
+      tags:
+      - categories
+    get:
+      consumes:
+      - application/json
+      description: get by form category
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.allCategoryResponse'
+      summary: Show an category
+      tags:
+      - categories
+    patch:
+      consumes:
+      - application/json
+      description: update by form category
+      parameters:
+      - description: id
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: name
+        in: body
+        name: name
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.updateCategoryForm'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controllers.allCategoryResponse'
+      security:
+      - BearerAuth: []
+      summary: update an category
+      tags:
+      - categories
   /api/v1/products:
     get:
       consumes:
@@ -308,6 +445,8 @@ paths:
           description: Bad Request
           schema:
             type: string
+      security:
+      - BearerAuth: []
       summary: delete an product
       tags:
       - products
@@ -470,7 +609,6 @@ paths:
       - description: update-user-form
         in: body
         name: updateUserForm
-        required: true
         schema:
           $ref: '#/definitions/controllers.updateUserForm'
       produces:
